[project]
name = "fastapi_aiograpi"
version = "0.13.0"
description = "FastAPI wrapper for Instagram API"
dependencies = [
    "aiograpi>=0.0.3,<0.1.0",
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "python-dotenv>=1.0.1",
    "sentry-sdk>=2.13.0",
    "aiohttp>=3.10.5",
    "redis>=4.5.5",
    "asyncio>=3.4.3",
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"

[[project.authors]]
name = "tadeasf"
email = "taddy.fort@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_aiograpi"]

[tool.rye.scripts]
podman-clean = "podman-compose down --remove-orphan"
podman-deploy = "podman-compose -f docker-compose.yml up -d --build"